<resources>
    <string name="app_name">WalkieWalkie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="communication_area_name">Communication Area</string>
    <string name="body_condition_name">Body Condition</string>
    <string name="achievement_name">Achievement</string>
    <string name="profile_name">Profile</string>
    <string name="home_name">Home</string>
    <string name="communication_icon_screen">communication_icon_screen</string>
    <string name="posting_area_name">Posting Area</string>
    <string name="posting_area_icon_screen">Posting Area Icon Screen</string>
    <string name="what_s_on_your_mind_today">What\'s on your mind today?</string>
    <string name="Hint_Post">Share you Healthy life style here ~</string>
    <string name="post_button_word">Post</string>
    <string name="this_post_will_share_to_everyone">*this Post will share to everyone</string>
    <string name="UserName">UserName</string>
    <string name="ImagePosting">ImagePosting</string>
    <string name="PostOnScreen">PostOnScreen</string>
    <string name="FloatingButtonValue">CommunicationAreaButton</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="ArrowButton">UpToTop</string>
    <string name="EditButton">EditButton</string>
    <string name="LikedButton">LikedButton</string>
    <string name="DeleteButton">DeletePost</string>
    <string name="EditTextValue">EditTextValue</string>
    <string name="EditText">Edit Text</string>
    <string name="Done">Done</string>
    <string name="Back">Back</string>
    <string name="EditPostTitle">Edit Text</string>
    <string name="logout">logout</string>
    <string name="Warning">Warning!!!</string>
    <string name="DeleteRemainder">**The post will permently deleted**</string>
    <string name="DeleteComfirm">Yes</string>
    <string name="DeletedNotComfirmtext">no</string>
    <string name="HomeTitleValue">WalkieWalkie</string>
    <string name="LetGo"><![CDATA[Let Go >>>]]></string>
    <string name="GoStepCounter">Check Your Step Counter</string>
    <string name="RemainderDetails">Click Us to know function of each fragment</string>
    <string name="OKName">Alright</string>
</resources>