<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">
    <TextView
        android:id="@+id/postDialogtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Warning"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/tomato_red"
        />

    <TextView
        android:id="@+id/postDeleteRemainder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:text="@string/DeleteRemainder"
         />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/DeleteComfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DeleteComfirm"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        />

    <Button
        android:id="@+id/DeleteNotComfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DeletedNotComfirmtext"
        android:layout_weight="1"
        />
</LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>