<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/TutorialTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Warning"
            android:textColor="@color/Nimvelo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TutorialDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:gravity="center"
            android:text="@string/DeleteRemainder"
            />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/AllrightButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OKName" />

    </LinearLayout>
</androidx.cardview.widget.CardView>